--- a/index.html
+++ b/index.html
@@ -8,38 +8,32 @@
     <title>The Booleaner</title>
 </head>
 <body>
-    <header>
-        <!--Intestazione pagina con immagini e relativo logo-->
-        <div class="logo">
-            <img src="./img/logo.svg" alt="logo">
-        </div>
-    </header>
-    <main>
-        <!--Corpo della pagina con Titolo e autore -->
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di TIm Berners-Lee</h1>
-        <div>
-            Scritto da <strong class="autore">The Booleaner</strong><br>
-            il 10/10/2020
-        </div>
-        <!--Immagini centrali e didascalia-->
-        <div class="tim">
-            <img src="./img/tim-1.jpg" alt="Tim">
-            <img src="./img/tim-2.jpg" alt="Tim">
-            <p>
+    <div class="container">
+        <header>
+            <!--Immagine piu il logo della pagina-->
+            <div class="immagine-logo">
+                <img src="./img/logo.svg" alt="logo" width="300px" height="250px">
+            </div>
+        </header>
+        <main>
+            <!--Titolo dell'articolo-->
+            <div>
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <address>
+                        Scritto da <b class="autore">The booleaner</b><br>
+                        <i class="data-pubblicazione">il 10/10/2020</i>
+                    </address>
+            </div>
+            <!--Immagini e didascalia dell'autore-->
+            <div class="autore-immagini">
+                <img src="./img/tim-1.jpg" alt="Autore">
+                <img src="./img/tim-2.jpg" alt="Autore">
+            </div>
+            <div>
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd Photo: Wikimedia, by Paul Clarke
-            </p>
-        </div>
-        <div>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni iusto non quidem soluta sapiente enim fuga at aspernatur perspiciatis eum tempore cum aliquam, quibusdam molestiae aperiam delectus labore excepturi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. <dfn> Explicabo eius et consequuntur quis? Officiis vitae magni quo nihil deserunt eaque amet rem</dfn> totam nam accusamus, et veniam praesentium labore sint!
-        </div>
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni iusto non quidem soluta sapiente enim fuga at aspernatur perspiciatis eum tempore cum aliquam, quibusdam molestiae aperiam delectus labore excepturi.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo eius et consequuntur quis? Officiis vitae magni quo nihil deserunt eaque amet rem totam nam accusamus, et veniam praesentium labore sint!
-        <!--Parte riassuntiva con la relativa tabella-->
-    </main>
-    <footer>
-        <!--Fine pagina inserimento di riquadri con le relative immagini-->
-    </footer>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
