--- a/index.html
+++ b/index.html
@@ -33,7 +33,52 @@
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd Photo: Wikimedia, by Paul Clarke
             </div>
+            <!--Descrizione dell'articolo-->
+            <div>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat valutpat. Ut wisi enim ad minim veniam, quis nostrud <mark>exerci tation ullamcorper suscipit lobortis nils ut aliquip ex ea commodo consequat</mark>. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            </div>
+            <!--Punti salienti-->
+            <div>
+                <ul class="punti-salienti">
+                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat valutpat.</li>
+                    <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nils ut aliquip ex ea commodo consequat.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat valutpat.</li>
+                </ul>
+            </div>
+            <!--Tabella descrittiva-->
+            <table>
+                <tr class="header">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+                <tr class="compresi">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus hatum.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus hatum.</td>
+                </tr>
+                <tr class="compresi">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus hatum.</td>
+                </tr>
+            </table>
+            <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat valutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nils ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <mark>illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</mark> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            </p>
         </main>
+        <footer>
+            <!--Siti aggiuntivi-->
+            <h4>Potrebbero interessarti</h4>
+            <h3 class="monitor"><b>Lorem ipsum dolor</b></h3>
+            <!--Immagini-->
+            <h3 class="grafico"><b>Lorem ipsum dolor</b></h3>
+        </footer>
     </div>
 </body>
 </html>
